--- a/service_information/crm_learn.html
+++ b/service_information/crm_learn.html
@@ -23,16 +23,9 @@
 
     }
 
-    body.dark-theme .app-showcase .app-platform{
-        background: #111;
+    body.dark-theme .crm-feature-badge{
+        background: #000;
     }
-    body.dark-theme .app-showcase .app-platform i{
-        color: rgb(14, 124, 119);
-    }
-    body.dark-theme .app-showcase .app-platform h2{
-        color:rgb(14, 124, 119);
-    }
-
     body.dark-theme table tr:nth-child(even){
         background: rgb(14, 124, 119);
         color: white;
@@ -52,7 +45,7 @@
             padding: 5px 15px;
             background: #f8f9fa;
             border-radius: 20px;
-            margin: 0 5px 10px 0;
+            margin: 10px 5px 10px 0;
             border: 1px solid #ddd;
             font-size: 0.9rem;
         }
