--- a/service_information/media_learn.html
+++ b/service_information/media_learn.html
@@ -19,11 +19,26 @@
     }
 
     body.dark-theme .platform-badge , body.dark-theme .strategy-card  {
-        background: #111;
+        background: #0e7c77;
     }
 
     body.dark-theme .strategy-card h3{
         color: #fff;
+    }
+
+    body.dark-theme .strategy-list li i{
+/*         background: linear-gradient(135deg, #fdc304, #ffd13a);*/
+         color:#ffd13a ;
+    } 
+ body.dark-theme .strategy-icon i{
+        color: #000;
+    }
+    body.dark-theme  .feature-icon i{
+        color: #000;
+    }
+    body.dark-theme .strategy-icon{
+        background: linear-gradient(135deg, #fdc304, #ffd13a);
+        color: #000;
     }
 
 
