--- a/service_information/ppc_learn.html
+++ b/service_information/ppc_learn.html
@@ -27,16 +27,35 @@
     }
 
     body.dark-theme .service-card , body.dark-theme .ad-platform-card{
-        background: #222;
+        background: #0e7c77
     }
 
     body.dark-theme .platform-logo{
-        background: #222;
+        background: #0e7c77;
     }
 
     body.dark-theme .metric-card{
         background: #222;
     }
+
+    body.dark-theme .feature-icon{
+        color: #ffd13a;
+    }
+
+    body.dark-theme .platform-features i.fa-check {
+        color: #ffd13a;
+    }
+
+    body.dark-theme .metric-card{
+        background: #0e7c77;
+        border-top: 4px solid #fdc304;
+    }
+
+    body.dark-theme .metric-value {
+    color: #fdc304;
+}
+
+
         
         /* Service Cards */
         .service-grid {
