--- a/service_information/app_learn.html
+++ b/service_information/app_learn.html
@@ -24,10 +24,10 @@
     }
 
     body.dark-theme .app-showcase .app-platform{
-        background: #111;
+        background: #0e7c77;
     }
     body.dark-theme .app-showcase .app-platform i{
-        color: rgb(14, 124, 119);
+        color: #fdc304;
     }
     body.dark-theme .app-showcase .app-platform h2{
         color:rgb(14, 124, 119);
